<resources>
    <string name="app_name">Cheikh Youssouf</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cheikh Youssoufou</string>
    <string name="nav_header_subtitle">applicationtafsir@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Téléchargement</string>
    <string name="menu_slideshow">Tafsir</string>
    <string name="menu_tools">Enrégistrement</string>
    <string name="menu_video">Vidéo</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">A propos de Cheikh Youssoufou</string>
    <string name="propos">Le Cheikh El Hadj Youssoufou OUEDRAOGO est un grand maître, un personnage important et impliqué dans le fonctionnement de sa société, dans la croyance en Dieu, il s’agit d’une figure emblématique de l’Islam au-delà du Burkina Faso, une référence en matière coranique, d’obédience tidjani, de la branche Fayda. Il est né au Yatenga le 1er janvier 1961, dans une famille pieuse reconnue, fit ses premiers pas dans le sillage de l’adoration et de la soumission totale à ALLAH. Dès son jeune âge, il se distinguait déjà à plusieurs égards de ses autres camarades : curieux, travailleur acharné, humble et attentif. Au dire de sa mère, il s’agit d’un enfant prédestiné, né en contexte de bouleversements (on est au lendemain des indépendances), dans une famille de grands croyants, menant vie de mosquée et de prières, de récitations et de prosternation, de reconnaissance envers Dieu, un lundi au petit matin pendant le mois du guide de la voix, tout comme le prophète (SAW). Cela a valu une attention particulière à son ascension qui ne tarda pas à s’annoncer.Né dans une grande famille de quinze enfants, cinquième fils du côté maternel, le Cheikh trouva son grand-père très croyant, ainsi que son paternel qui possédait même une école coranique, une centaine de disciples un peu partout notamment à Ouahigouya, Kaya et Mandougou. Il est issu de la lignée des Nakomse de Rissam d’où sa famille partit pour s’établir à Ouahigouya.
Après un brillant parcours au Madersa, il fut admis à un concours, afin de continuer ses études en Lybie à partir de 1978, où il resta pendant une décennie. Ayant obtenu deux licences en Lybie, il ambitionnait de continuer des études doctorales, ce que son entourage proche réfuta, il fut fait Khalife, se chargeant à la fois des études et de l’encadrement des disciples, et aussi de la direction de la prière ; sa maitrise, sa force et son aura ont rapidement permis l’affluence de fidèles venus des quatre coins du pays. Il constitue ainsi une continuité de l’œuvre de son grand-père et celle de son père.
Patriote convaincu, il invite dès 1992 la communauté à être plus solidaire, son aptitude à assister les autres, l’exemplarité qu’il a su cultiver ont fait de lui une personne de ressource au niveau national, le message de sociabilité et de simplicité véhiculé par ses prêches, en font un fédérateur compréhensif, un bâtisseur pour la cause publique.  Ils sont nombreux les témoignages qui montrent, dans l’entourage proche de Cheikh Youssoufou OUEDRAOGO, et convergent dans le sens d’une image de paix, d’une voix de délivrance, d’un personnage dont la construction progressive s’est faite de façon spécifique, désintéressée, altruiste. Il est l’organisateur du Mouloud international à Ouahigouya, en hommage au Cheikh Ahmad Tidjani, événement regroupant des milliers de fidèles. Des délégations venues de toute l’Afrique de l’Ouest, celle du Nord, et ailleurs se retrouvent pour la célébration annuelle. Ainsi chaque année, les Burkinabè se retrouvent avec Ivoiriens, Togolais, Gabonais, Mauritaniens, Sénégalais, Maghrébins, Sierra-léonais et même Américains, autour de l’adoration, la prière et la célébration. Le Cheikh est propriétaire d’une école franco-arabe dans laquelle sont suivis 400 élèves de la première année à la terminale.
Guide spirituel incontesté de milliers de fidèles venus d’un peu partout dans le monde, le Cheikh Youssoufou OUEDRAOGO s’avère être une sorte de ciment social, un fédérateur écouté, un éducateur respecté, un travailleur expérimenté tout en humilité.
Il se considère comme étant éducateur, chercheur et étudiant, en quête permanente du savoir, ce grand homme demeure un ouvrier de l’ombre, discret.
Cette figure emblématique est un recours pour la jeunesse en quête d’autoréalisation, un sage conseil d’orientation, un intermédiaire écouté, jouissant d’une influence de plus en plus importante.
Les rencontres qu’il organise sont aussi importantes par le nombre de fidèles présents que par la qualité des invités d’honneur. En effet, parmi ses amis et collaborateurs, on peut citer le Cheikh Cherif Moumoun Haïdara du Conseil islamique malien, le Nigérien Cheikh Aboubakar de Tiota, l’ivoirien Cheikh Cherif Oumar à Abidjan. Il faut noter qu’une importante communauté constituée des disciples de Cheikh Youssouf OUEDRAOGO est présente en Côte-d’Ivoire. Le Ghana, le Togo et le Bénin ne sont pas en reste, et même au-delà.
 C’est surtout avec le Sénégal que la communauté tidjani du Burkina Faso a tissé les plus anciennes et les plus durables de ses relations à l’extérieur. Et pour cause, le « foyer-mère » de cette branche après Fez au Maroc, se trouve justement à Kaolack, terre natale de l’une de ses quatre épouses. Il s’agit d’une des petites filles du Cheikh Ibrahim NIASS, et fille du Cheikh Assane CISSE, tous deux grandes figures de l’obédience tidjani. Il faut dire que le père de Cheikh Youssoufou fit ses études à Kaolack, puis alla à la Mecque à pieds.
C’est de Fez et de Kaolack que le Cheikh Youssoufou obtint l’autorisation de répandre, en tant que son défenseur, la voix des 12 grains dont il est devenu un des garants, et l’initiateur en lieu et place de l’ancienne règle des 11 grains.
Ce réseautage important vise à faciliter et à fédérer les actions communes engagées dans le sens de la vocation tidjani.
Les nombreux voyages effectués par le Cheikh Youssoufou l’ont conduit sur les quatre continents, à la recherche d’une meilleure compréhension de la chose religieuse, ils en font un personnage d’expérience, imprégné de l’actualité et du fonctionnement de la foi islamique.
Enquêteurs : OUEDRAOGO Hamidou, TRAORE Abasse, OUEDRAOGO Rahimane
Superviseur : Dr Hamidou TAMBOURA, Anthropologue.
</string>
    <string name="apropos_titre">BIOGRAPHIE DE CHEIKH EL HADJ YOUSSOUFOU OUEDRAOGO</string>
    <string name="titre_principale">Tafsir Coran de Cheikh Al Islam Ibrahima NIASS traduit en Mooré par Cheikh El Hadj Youssoufou OUEDRAOGO</string>
    <string name="texte_enregistrement"> Cet enrégistrement est facultatif c est juste pour connaitre les utilisateurs de l\'application et pouvoir dialoguer avec eux pour une amélioration futur de l\'application merci pour votre compréhension.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
