<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.traore.abasse.tafsir.application.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.traore.abasse.tafsir.application.ui.download.DownloadFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_download" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.traore.abasse.tafsir.application.ui.tafsir.TafsirFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_tafsir" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.traore.abasse.tafsir.application.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.traore.abasse.tafsir.application.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />



    <fragment
        android:id="@+id/nav_send"
        android:name="com.traore.abasse.tafsir.application.ui.propos.AproposFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_apropos" />
</navigation>